@@ -1398,10 +1398,12 @@ ldns_resolver_print(FILE *output, ldns_resolver *r)
 {
 	uint16_t i;
 	ldns_rdf **n;
+	size_t *rtt;
 	if (!r) {
 		return;
 	}
 	n = ldns_resolver_nameservers(r);
+	rtt = ldns_resolver_rtt(r);
 
 	fprintf(output, "port: %d\n", (int)ldns_resolver_port(r));
 	fprintf(output, "edns0 size: %d\n", (int)ldns_resolver_edns_udp_size(r));
@@ -1421,7 +1423,7 @@ ldns_resolver_print(FILE *output, ldns_resolver *r)
 	for (i = 0; i < ldns_resolver_nameserver_count(r); i++) {
 		fprintf(output, "\t");
 		ldns_rdf_print(output, n[i]);
-		fprintf(output, "\n");
+		fprintf(output, " - %d\n", rtt[i]);
 	}
 }
 
